Update About Us page

--- a/app/views/static_pages/about_us.html.erb
+++ b/app/views/static_pages/about_us.html.erb
@@ -1,30 +1,32 @@
 <!-- Section 2 - Homepage Card section-->
 <div class="container">
-    <div class="container">
-
-        <!-- Main Paragraph -->
-        <div class="col">
+    <div class="row">
+        <div class="col s12 m12">
             <h5>Peeking behind the veil -- about team Service Works</h5>
-            <p>Here is some history about our project.</p>
+            <p>Our team first came together during Week 7 at Wyncode Academy. A common idea brought us together, the desire to build a service platform for local freelancers. Service Works represents the culmination of nearly two long weeks of planning, designing, and coding.</p>
+            <p>Service Works is a platform designed to enable small businesses and local freelancers easy access to the customers that they may never have had otherwise.</p>
         </div>
     </div>
 
-    <div class="row ">
+    <div class="row">
       <div class="col s12 m4">
         <div class="icon block z-depth-1">
-            <h4 class="center brown-text">Chris Morse</h4>
             <div class="card 300px">
               <div class="card-image contact-img">
-                <%= image_tag("chrismorse.jpg")%>
-                <span class="card-title"> <!-- TITLE --> </span>
+                  <%= image_tag("chrismorse.jpg", class: "responsive-img") %>
               </div>
               <div class="card-content white">
+                <h5 class="center green-text">Chris Morse</h5>  
+                <div class="card-action white">
+                </div>
                 <ul>
-                  <li>Contact@ChrisMorse.cn</li>
-                  <li>Connect with me on LinkedIn! (https://www.linkedin.com/in/modake)</li>
+                  <li><a href="mailto:Contact@ChrisMorse.cn">Contact@ChrisMorse.cn</a></li>
+                  <li><a href="www.ChrisMorse.cn" target="_blank">www.ChrisMorse.cn</a></li>
+                  <li><a href="https://www.linkedin.com/in/modake" target="_blank">Connect on LinkedIn!</a></li>
+                  <li>(407) 494-0585</li>
                 </ul>
-              </div>
-              <div class="card-action white">
+                <div class="card-action white">
+                </div>  
               </div>
             </div>
         </div>
@@ -32,43 +34,61 @@
 
         <div class="col s12 m4">
           <div class="icon block z-depth-1">
-              <h4 class="center brown-text">Stephanie Reyes</h4>
               <div class="card 300px">
                 <div class="card-image contact-img">
-                  <%= image_tag("Stephaniereyes.jpg")%>
+                  <%= image_tag("Stephaniereyes.jpg", class: "responsive-img") %>
                   <span class="card-title"> <!-- TITLE --> </span>
                 </div>
                 <div class="card-content white">
+                  <h5 class="center green-text">Stephanie Reyes</h5>
+                  <div class="card-action white">
+                  </div>
                   <ul>
-                    <li>www.stephaniereyes.co</li>
-                    <li>stephanie@webreyes.com</li>
-                    <li>(786)390-7635</li>
+                    <li><a href="mailto:Stephanie@WebReyes.com">Stephanie@WebReyes.com</a></li>
+                    <li><a href="www.StephanieReyes.co" target="_blank">www.StephanieReyes.co</a></li>
+                    <li><a href="https://www.linkedin.com/in/stephanie-reyes-62198b106" target="_blank">Connect on LinkedIn!</a></li>                    
+                    <li>(786) 390-7635</li>
                   </ul>
-                </div>
-                <div class="card-action white">
+                  <div class="card-action white">
+                  </div>    
                 </div>
               </div>
           </div>
         </div>
           <div class="col s12 m4">
             <div class="icon block z-depth-1">
-            <h4 class="center brown-text">Alex Miller</h4>
               <div class="card 300px">
                 <div class="card-image contact-img" >
-                    <%= image_tag("alexmiller.jpg")%>
+                    <%= image_tag("alexmiller.jpg", class: "responsive-img") %>
                   <span class="card-title"> <!-- TITLE --> </span>
                 </div>
                 <div class="card-content white">
+                  <h5 class="center green-text">Alex Miller</h5>
+                  <div class="card-action white">
+                  </div>
                   <ul>
-                    <li>www.alex-miller.co</li>
-                    <li>apmiller108@yahoo.com</li>
-                    <li>319-621-1065</li>
+                    <li><a href="www.Alex-Miller.co" target="_blank">www.Alex-Miller.co</a></li>
+                    <li><a href="mailto:APMiller108@Yahoo.com">APMiller108@Yahoo.com</a></li>
+                    <li><a href="https://www.linkedin.com/in/alex-miller-551b0b59" target="_blank">Connect on LinkedIn!</a></li>                    
+                    <li>(319) 621-1065</li>
                   </ul>
-                </div>
-                <div class="card-action white">
+                  <div class="card-action white">
+                  </div>    
                 </div>
               </div>
             </div>
           </div>
         </div>
+        <div class="row">
+            <div class="col s12 m12">
+                <h5>The Future of Service Works</h5>
+                <p>As Service Works was intended to be an interface between local businesses and customers, there are still a few features that need to be implemented.</p>
+                <ul class="collection">
+                    <li class="collection-item">Appointment Scheduling</li>
+                    <li class="collection-item">Recurring Payments</li>
+                    <li class="collection-item">Advanced GeoLocation</li>
+                </ul>
+                <p>With the above features Service Works will be able to provide advanced billing and scheduling functions to both customers and servicers, better enabling our target users access to the technology they need to maximize revenues.</p>
+            </div>
+        </div>    
       </div>
