--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -132,47 +132,30 @@
          <p class="center-align">Simply request a quote for your project, include any relevant details and photos, then wait for a local company to respond with an estimate.</p>
        </div>
      </div>
- </div>
+   </div>
 
 <!-- Section 4 - Information services section -->
 <div class="container">
-
-
     <div class="row ">
       <div class="col s4 m4">
         <div class="icon block">
           <h2 class="center brown-text"><i class="material-icons">schedule</i></h2>
-          <!-- <h5 class="home-tag">24/7 Service</h5> -->
+           <h5 class="home-tag">24/7 Service</h5> 
         </div>
       </div>
 
       <div class="col s4 m4">
         <div class="icon block">
           <h2 class="center brown-text"><i class="material-icons">flash_on</i></h2>
-          <!-- <h5 class="home-tag">Home Repairs</h5> -->
+           <h5 class="home-tag">Home Repairs</h5> 
         </div>
       </div>
 
       <div class="col s4 m4">
         <div class="icon block">
           <h2 class="center brown-text"><i class="material-icons">perm_identity</i></h2>
-          <!-- <h5 class="home-tag">All Services</h5> -->
+           <h5 class="home-tag">All Services</h5> 
         </div>
       </div>
     </div>
-
 </div>
-
-
-<!--Section 5 -  parallax container-->
-
-<!-- <div class="parallax-container valign-wrapper">
-  <div class="section no-pad-bot">
-    <div class="container">
-      <div class="row center">
-      </div>
-    </div>
-  </div>
-  <div class="parallax"><%= image_tag "dining.jpg" %></div>
-  <div class="overlay"></div>
-</div> -->
