Update home page

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,18 +1,18 @@
 
 <div class="parallax-container" id="homedoor">
    <!-- Section 1 - Parrallax Home -->
-   <div class="parallax "><%= image_tag "teardown.jpg" %>  </div>
+   <div class="parallax"><%= image_tag "teardown.jpg" %></div>
 
    <!-- overlay  -->
     <div class="overlay">
       <h1 class="home-title">Need home repairs?</h1>
       <form class="home-form row">
-       <div class="input-field col s10 m4 offset-m4 offset-s1 center-align">
-         <a class="btn signup light-green" href="users/new">Sign up!</a>
+       <div class="input-field col s10 m6 offset-m3 offset-s1 center-align">
+         <a class="btn signup light-green" href="users/new">Request a Quote!</a>
        </div>
       </form>
       <div class="row plain-div">
-        <div class="col s12 m6 offset-m3 ">
+        <div class="col s12 m6 offset-m3">
           <div class="col s4 m4">
             <div class="icon block">
               <h2 class="center"><i class="material-icons medium">schedule</i></h2>
@@ -30,7 +30,7 @@
           <div class="col s4 m4">
             <div class="icon block">
               <h2 class="center"><i class="material-icons medium">people</i></h2>
-              <h5 class="home-tag">All Services</h5>
+              <h5 class="home-tag">Local Professionals</h5>
             </div>
           </div>
         </div>
@@ -41,7 +41,7 @@
 </div>
     <!-- Section 2 - Getting Started Section -->
     <div class="container center-align" id="about">
-      <i class="material-icons medium center-align">settings</i>
+      <i class="material-icons large center-align">settings</i>
       <h2>Getting Started</h2>
       <hr>
       <div class="row">
@@ -54,7 +54,7 @@
         </div>
       </div>
 
-        <div class="row">   <!-- 1-2-3 Cards starts here  -->
+        <div class="row">   
           <div class="col s12">
             <div class="col s12 m4 ">
               <div class="card">
@@ -68,8 +68,6 @@
                   <div class="card-action white black-text">
                     <h3>Request a Quote</h3>
                     <p>Looking to start a new home project? Hire an expert to ensure your project is done right from start to finish.</p>
-                    <!-- <a href="#">Request a Quote</a>
-                    <h5>Request a Quote</h5> -->
                   </div>
                 </div>
               </div>
@@ -79,7 +77,6 @@
             <div class="icon block">
               <div class="card">
                 <div class="card-content ">
-                  <!-- <h3 class="center">1</h3> -->
                   <div class="card-image">
                    <div class="icon-wrapper">
                      <i class="material-icons large center-align">filter_2</i>
@@ -89,8 +86,6 @@
                   <div class="card-action white black-text">
                     <h3 class="center ">Receive Estimates</h3>
                     <p>Local companies will send you estimates based on your request. </p>
-                    <!-- <a href="#">Receive Estimates</a>
-                    <h5>Receive Estimates</h5> -->
                   </div>
                  </div>
               </div>
@@ -101,7 +96,6 @@
              <div class="icon block">
                <div class="card">
                  <div class="card-content ">
-                   <!-- <h3 class="center">1</h3> -->
                    <div class="card-image">
                      <div class="icon-wrapper">
                        <i class="material-icons large center-align">filter_3</i>
@@ -111,7 +105,6 @@
                    <div class="card-action white black-text">
                      <h3 class="center ">Choose an Expert</h3>
                      <p>Read reviews and chat with local companies to ensure your project turns out exactly the way you want.</p>
-                     <!-- <a href="#">Get started!</a> -->
                    </div>
                   </div>
                </div>
@@ -119,7 +112,7 @@
            </div> <!-- End of Third Card -->
           </div>
         </div> <!-- 1-2-3 Cards ends here  -->
-    </div> <!-- Section 2 - Getting Started Section ends -->
+    </div> 
 
 
   <!-- Section 3 - Parallax Home  -->
