edit static pages

--- a/app/views/user_notifier/send_signup_email.html.erb
+++ b/app/views/user_notifier/send_signup_email.html.erb
@@ -7,5 +7,18 @@
     <h1>Thanks for signing up, <%= @user.first_name %>!</h1>
     <p>Thanks for joining and have a great day! Now sign in and do
 awesome things!</p>
+      
+    <div class="container">
+        <div class="row">
+            <div class="col s12 m12">
+                <h5>Peeking behind the veil -- about team Service Works</h5>
+                <p>Our team first came together during Week 7 at Wyncode Academy. A common idea brought us together, the desire to build a service platform for local freelancers. Service Works represents the culmination of nearly two long weeks of planning, designing, and coding.</p>
+                <p>Service Works is a platform designed to enable small businesses and local freelancers easy access to the customers that they may never have had otherwise.</p>
+            </div>
+        </div>
+    </div>    
+      
+      
+      
   </body>
 </html>
