--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -54,9 +54,8 @@
         </div>
       </div>
 
-        <div class="row">   
-          <div class="col s12">
-            <div class="col s12 m4 ">
+        <div class="row s12">   
+            <div class="col s12 m4">
               <div class="card">
                 <div class="card-content">
                   <div class="card-image">
@@ -71,7 +70,8 @@
                   </div>
                 </div>
               </div>
-           </div>   <!-- End of First Card -->
+            </div>   
+    <!-- End of First Card -->
 
           <div class="col s12 m4">
             <div class="icon block">
@@ -110,7 +110,6 @@
                </div>
              </div>
            </div> <!-- End of Third Card -->
-          </div>
         </div> <!-- 1-2-3 Cards ends here  -->
     </div> 
 
