User asset_url method for images on services page

--- a/app/views/static_pages/services.html.erb
+++ b/app/views/static_pages/services.html.erb
@@ -46,24 +46,24 @@
 
 </style>
 
-<!-- <%= images = [
-    ["assets/services/roof.jpg", "Roof Repair"],
-    ["assets/services/walltile.jpg", "Tile Installation"],
-    ["assets/services/planning.jpg", "Project Consulting"],
-    ["assets/services/powerwashing.jpg", "Power Washing"],
-    ["assets/services/floor.jpg", "Flooring Installation"],
-    ["assets/services/drywall.jpg", "Drywall Repair"],
-    ["assets/services/kitchen.jpg", "Kitchen Installation"],
-    ["assets/services/paving.jpg", "Driveway Paving"],
-    ["assets/services/hvac.jpg", "HVAC Servicing"],
-    ["assets/services/plumbing.jpg", "Plumbing Services"],
-    ["assets/services/landscaping.jpg", "Lawn Maintenance"],
-    ["assets/services/tools.jpg", "Artisan Services"],
-    ["assets/services/electrician.jpg", "Electrical Services"],
-    ["assets/services/painting.jpg", "Interior/Exterior Painting"],
-    ["assets/services/carpenter.jpg", "Carpentry"],
-    ["assets/services/fence.jpg", "Fence Installation"]
-    ] %> -->
+<% images = [
+    [asset_url("services/roof.jpg"), "Roof Repair"],
+    [asset_url("services/walltile.jpg"), "Tile Installation"],
+    [asset_url("services/planning.jpg"), "Project Consulting"],
+    [asset_url("services/powerwashing.jpg"), "Power Washing"],
+    [asset_url("services/floor.jpg"), "Flooring Installation"],
+    [asset_url("services/drywall.jpg"), "Drywall Repair"],
+    [asset_url("services/kitchen.jpg"), "Kitchen Installation"],
+    [asset_url("services/paving.jpg"), "Driveway Paving"],
+    [asset_url("services/hvac.jpg"), "HVAC Servicing"],
+    [asset_url("services/plumbing.jpg"), "Plumbing Services"],
+    [asset_url("services/landscaping.jpg"), "Lawn Maintenance"],
+    [asset_url("services/tools.jpg"), "Artisan Services"],
+    [asset_url("assets/services/electrician.jpg"), "Electrical Services"],
+    [asset_url("services/painting.jpg"), "Interior/Exterior Painting"],
+    [asset_url("services/carpenter.jpg"), "Carpentry"],
+    [asset_url("services/fence.jpg"), "Fence Installation"]
+    ] %>
 
 <ul class="gallery">
     <% images.each do |x, y| %>
