--- a/app/views/static_pages/services.html.erb
+++ b/app/views/static_pages/services.html.erb
@@ -59,7 +59,7 @@
     [asset_url("services/plumbing.jpg"), "Plumbing Services"],
     [asset_url("services/landscaping.jpg"), "Lawn Maintenance"],
     [asset_url("services/tools.jpg"), "Artisan Services"],
-    [asset_url("assets/services/electrician.jpg"), "Electrical Services"],
+    [asset_url("services/electrician.jpg"), "Electrical Services"],
     [asset_url("services/painting.jpg"), "Interior/Exterior Painting"],
     [asset_url("services/carpenter.jpg"), "Carpentry"],
     [asset_url("services/fence.jpg"), "Fence Installation"]
