--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,14 +1,11 @@
 <!-- Navbar -->
 <header>
   <div class="navbar-fixed">
-
     <nav>
      <div class="nav-wrapper">
-
-       <%= link_to '<span><i class="material-icons nav-icon large white-text">home</i>Service Works</span> '.html_safe, root_path, id: "logo", class: "brand-logo" %>
-
+         <%= link_to '<span><i class="material-icons nav-icon large white-text">home</i>Service Works</span> '.html_safe, root_path, id: "logo", class: "brand-logo" %>
        <!-- for hamburger menu -->
-      <a href="#" data-activates="mobile" class="button-collapse"><i class="material-icons">menu</i></a>
+      <a href="#" data-activates="mobile" class="button-collapse" style="padding-left: 10px;"><i class="material-icons">menu</i></a>
 
       <!-- links on desktop -->
          <ul id="nav-mobile" class="right hide-on-med-and-down">
