--- a/app/views/static_pages/about_us.html.erb
+++ b/app/views/static_pages/about_us.html.erb
@@ -79,6 +79,7 @@
             </div>
           </div>
         </div>
+        <br>
         <div class="row">
             <div class="col s12 m12">
                 <h5>The Future of Service Works</h5>
@@ -87,6 +88,7 @@
                     <li class="collection-item">Appointment Scheduling</li>
                     <li class="collection-item">Recurring Payments</li>
                     <li class="collection-item">Advanced GeoLocation</li>
+                    <li class="collection-item">Multiple Storefronts</li>
                 </ul>
                 <p>With the above features Service Works will be able to provide advanced billing and scheduling functions to both customers and servicers, better enabling our target users access to the technology they need to maximize revenues.</p>
             </div>
