--- a/app/views/user_notifier/quote_acceptance_notification.html.erb
+++ b/app/views/user_notifier/quote_acceptance_notification.html.erb
@@ -34,7 +34,7 @@ Service Works    </title>
     }
 
     .Hasna a {
-        color:#eb7260; text-decoration: none; font-weight: normal; font-style: normal;
+        color:#8BC34A; text-decoration: none; font-weight: normal; font-style: normal;
     }
 
     .Hasna p,
@@ -154,8 +154,8 @@ Service Works    </title>
                                             <table border="0" align="center" cellpadding="0" cellspacing="0" style="margin: 0;">
                                               <tbody>
                                                 <tr>
-                                                  <td bgcolor="#EB7260" align="center" valign="middle" style="display: inline-block; border-radius:22px; padding: 15px 35px; text-transform: uppercase; font-weight: normal; font-size: 14px; line-height: 100%; font-family: 'Nunito', Arial, sans-serif; color:#ffffff; margin: 0 !important; mso-line-height-rule: exactly;">
-                                                    <span><a href="#" style="text-decoration: none; font-style: normal; font-weight: normal; color:#ffffff;" class="tea14-content-editable">Log In Now!</a></span>
+                                                  <td bgcolor="#8BC34A" align="center" valign="middle" style="display: inline-block; border-radius:22px; padding: 15px 35px; text-transform: uppercase; font-weight: normal; font-size: 14px; line-height: 100%; font-family: 'Nunito', Arial, sans-serif; color:#ffffff; margin: 0 !important; mso-line-height-rule: exactly;">
+                                                    <span><a href=www.theserviceworks.co style="text-decoration: none; font-style: normal; font-weight: normal; color:#ffffff;" class="tea14-content-editable">Log In Now!</a></span>
                                                   </td>
                                                 </tr>
                                               </tbody>
@@ -188,7 +188,7 @@ Service Works    </title>
     <table width="100%" border="0" align="center" cellpadding="0" cellspacing="0" style="padding: 0; margin: 0;">
       <tbody>
         <tr>
-          <td bgcolor="#EB7260" valign="top" align="center" style="padding:20px 0px;">
+          <td bgcolor="#8BC34A" valign="top" align="center" style="padding:20px 0px;">
             <table class="table-wrapper" width="660" border="0" align="center" cellpadding="0" cellspacing="0">
               <tbody>
                 <tr>
