--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,29 +1,40 @@
 <footer class="page-footer #8bc34a light-green">
     <div class="container">
-        <div class="row">
-          <div class="col s12 white-text">
-            <div class="col m4 s6">
-              <h5 class="white-text"><i class="material-icons">home</i> Service Works</h5>
-              <ul>
-                <li><%= link_to 'About Us', about_us_path, class:"grey-text text-lighten-3" %></li>
-                <li><%= link_to 'Contact Us', contact_us_path, class:"grey-text text-lighten-3" %></li>
-                <li><%= link_to 'Services', services_path, class:"grey-text text-lighten-3" %></li>
-                <li><%= link_to 'Request a Quote', login_path, class:"grey-text text-lighten-3" %></li>
-                <li><%= link_to 'Servicer Login', login_path, class:"grey-text text-lighten-3" %></li>
-              </ul>
-            </div>
-            <div class="col m8 s12" id="footer-logo">
-              <h5 class="white-text">More Information</h5>
-              <p>Getting started on your home improvement or repair project is easy with Service Works. Our mission is to connect local service companies with individuals looking to get started on a home improvement or repair project.</p>
-              <p><%= link_to 'Click Here to Request a Quote', login_path, class:"grey-text text-lighten-3" %> and begin your home improvement journey.</p>
-            </div>
-          </div>
+    <div class="row">
+      <div class="col s12 white-text">
+        <div class="col m4 s6">
+          <h5 class="white-text">Get Started</h5>
+          <ol>
+            <li class="grey-text text-lighten-4">Request a Quote</li>
+            <li class="grey-text text-lighten-4">Receive Estimates</li>
+            <li class="grey-text text-lighten-4">Choose an Expert</li>
+          </ol>
+
+            <%= link_to 'Click here to begin!', services_path, class:"grey-text text-lighten-4" %>
         </div>
+        <div class="col m4 s6" id="divider">
+          <h5 class="white-text">Site Map</h5>
+          <ul>
+            <li><%= link_to 'About Us', about_us_path, class:"grey-text text-lighten-3" %></li>
+            <!-- <li><%= link_to 'Contact Us', contact_us_path, class:"grey-text text-lighten-3" %></li> -->
+            <li><%= link_to 'Services', services_path, class:"grey-text text-lighten-3" %></li>
+            <li><a class="grey-text text-lighten-3" href="#!">Request a Quote</a></li>
+            <li><a class="grey-text text-lighten-3" href="/login">Servicer Login</a></li>
+          </ul>
+        </div>
+        <div class="col m4 s12 right-align" id="footer-logo">
+          <h5><i class="material-icons">home</i> Service Works</h5>
+          <p>
+          Made with &hearts; in sunny South Florida.
+          </p>
+        </div>
+      </div>
+    </div>
   </div>
 
     <div class="footer-copyright">
       <div class="container">
-        &copy; 2015 by Wyncode.
+        &copy; 2015 by Service Works.
       </div>
     </div>
 </footer>
