--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -19,7 +19,7 @@
             <li><%= link_to 'About Us', about_us_path, class:"grey-text text-lighten-3" %></li>
             <!-- <li><%= link_to 'Contact Us', contact_us_path, class:"grey-text text-lighten-3" %></li> -->
             <li><%= link_to 'Services', services_path, class:"grey-text text-lighten-3" %></li>
-            <li><a class="grey-text text-lighten-3" href="#!">Request a Quote</a></li>
+            <li><a class="grey-text text-lighten-3" href="/login">Request a Quote</a></li>
             <li><a class="grey-text text-lighten-3" href="/login">Servicer Login</a></li>
           </ul>
         </div>
