--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -283,6 +283,14 @@ span.badge{
     #divider{
      border-right: none;
     }
+
+    a.btn.signup.light-green {
+      font-size: 1rem;
+    }
+
+    .home-tag {
+      font-size: 1rem;
+    }
 }
 /*iphone 5 and smaller*/
 @media screen and (max-width:324px){
