Fix links on About Us page

--- a/app/views/static_pages/about_us.html.erb
+++ b/app/views/static_pages/about_us.html.erb
@@ -16,17 +16,17 @@
                   <%= image_tag("chrismorse.jpg", class: "responsive-img") %>
               </div>
               <div class="card-content white">
-                <h5 class="center green-text">Chris Morse</h5>  
+                <h5 class="center green-text">Chris Morse</h5>
                 <div class="card-action white">
                 </div>
                 <ul>
                   <li><a href="mailto:Contact@ChrisMorse.cn">Contact@ChrisMorse.cn</a></li>
-                  <li><a href="www.ChrisMorse.cn" target="_blank">www.ChrisMorse.cn</a></li>
-                  <li><a href="https://www.linkedin.com/in/modake" target="_blank">Connect on LinkedIn!</a></li>
+                  <li><%= link_to "www.ChrisMorse.cn", "http://www.ChrisMorse.cn" %></li>
+                  <li><%= link_to "Connect on LinkedIn!", "https://www.linkedin.com/in/modake" %></li>
                   <li>(407) 494-0585</li>
                 </ul>
                 <div class="card-action white">
-                </div>  
+                </div>
               </div>
             </div>
         </div>
@@ -45,12 +45,12 @@
                   </div>
                   <ul>
                     <li><a href="mailto:Stephanie@WebReyes.com">Stephanie@WebReyes.com</a></li>
-                    <li><a href="www.StephanieReyes.co" target="_blank">www.StephanieReyes.co</a></li>
-                    <li><a href="https://www.linkedin.com/in/stephanie-reyes-62198b106" target="_blank">Connect on LinkedIn!</a></li>                    
+                    <li><%= link_to "www.StephanieReyes.co", "http://www.StephanieReyes.co" %></li>
+                    <li><%= link_to "Connect on LinkedIn!", "https://www.linkedin.com/in/stephanie-reyes-62198b106" %></li>
                     <li>(786) 390-7635</li>
                   </ul>
                   <div class="card-action white">
-                  </div>    
+                  </div>
                 </div>
               </div>
           </div>
@@ -67,13 +67,14 @@
                   <div class="card-action white">
                   </div>
                   <ul>
-                    <li><a href="www.Alex-Miller.co" target="_blank">www.Alex-Miller.co</a></li>
                     <li><a href="mailto:APMiller108@Yahoo.com">APMiller108@Yahoo.com</a></li>
-                    <li><a href="https://www.linkedin.com/in/alex-miller-551b0b59" target="_blank">Connect on LinkedIn!</a></li>                    
+                    <li><%= link_to "www.Alex-Miller.co", "http://www.Alex-Miller.co" %></li>
+                    <li><%= link_to "Connect on LinkedIn!", "https://www.linkedin.com/in/alex-miller-551b0b59" %></li>
+
                     <li>(319) 621-1065</li>
                   </ul>
                   <div class="card-action white">
-                  </div>    
+                  </div>
                 </div>
               </div>
             </div>
@@ -92,5 +93,5 @@
                 </ul>
                 <p>With the above features Service Works will be able to provide advanced billing and scheduling functions to both customers and servicers, better enabling our target users access to the technology they need to maximize revenues.</p>
             </div>
-        </div>    
+        </div>
       </div>
