add missing div

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -11,7 +11,7 @@
             <li class="grey-text text-lighten-4">Choose an Expert</li>
           </ol>
 
-            <%= link_to 'Click here to begin!', services_path, class:"grey-text text-lighten-4" %>
+            <%= link_to 'Click here to begin!', new_user_path, class:"grey-text text-lighten-4" %>
         </div>
         <div class="col m4 s6" id="divider">
           <h5 class="white-text">Site Map</h5>
