--- a/app/views/reviews/_review.html.erb
+++ b/app/views/reviews/_review.html.erb
@@ -21,8 +21,10 @@
     <% end %>
   <% end %>
 
-
-  <%= f.text_area :comment, class:"materialize-textarea" %><br>
+  <div class="input-field">
+    <%= f.text_area :comment, class:"materialize-textarea", id:"textarea1" %><br>
+    <label for="textarea1">Write a review</label>
+  </div>
   <%# Add service request ID to params %>
   <%= hidden_field_tag( :service_request_id, @service_request.id  ) %>
   <%# Add company (user) ID to params %>
