--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -81,6 +81,7 @@
             <%= f.submit "Update", class: "btn btn-primary waves-effect waves-light indigo darken-4" %>
           </div>
     </div>
-  </div>
-</div>
+  </div><!--col-->
+</div><!--row-->
+</div> <!--container-->
 <% end %>
